manifests/dev/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: archgen-dev-api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: "acrarchgen.azurecr.io/api-gateway:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 150m
              memory: 256Mi
            requests:
              cpu: 75m
              memory: 128Mi
