manifests/dev/architecture-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: archgen-dev-architecture-service
  labels:
    app: architecture-service
spec:
  type: ClusterIP
  ports:
    - port: 8003
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: architecture-service
