manifests/dev/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: archgen-dev-auth-service
  labels:
    app: auth-service
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: auth-service
