manifests/dev/project-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: archgen-dev-project-service
  labels:
    app: project-service
spec:
  type: ClusterIP
  ports:
    - port: 8002
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: project-service
