manifests/dev/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archgen-dev-api-gateway-ingress
  labels:
    app: api-gateway
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: true
    appgw.ingress.kubernetes.io/rule-type: path
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: api-dev.archgen.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: archgen-dev-api-gateway
                port:
                  number: 8080
