manifests/dev/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archgen-dev-frontend-ingress
  labels:
    app: frontend
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: true
    appgw.ingress.kubernetes.io/rule-type: path
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: dev.archgen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archgen-dev-frontend
                port:
                  number: 80
